<resources>

    <string name="app_name">Percent Of</string>
    <string name="percent">Percent</string>
    <string name="number">Quantity</string>
    <string name="simbolPercent">%</string>
    <string name="of">Of</string>
    <string name="the">The</string>
    <string name="hintPercent">50</string>
    <string name="hintNumber">100.00</string>
    <string name="calculate">calculate</string>

    <string name="bannerErrorPerc">Write a valid percentage !</string>
    <string name="bannerErrorQuant">Write a valid amount !</string>
    <string name="clean">Clean</string>
</resources>
